ingress/nginx_ingress_rules.yaml
#Ingress rule should be in the same namespace of services,  tested on v1.9.3 version

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"

spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /a
        backend:
          serviceName: websitea
          servicePort: 80
      - path: /b
        backend:
          serviceName: websiteb
          servicePort: 80
